# oicb

./: .gitignore  CHANGES  CMakeLists.txt  Makefile  README  chat.c  chat.h  compat.h  history.c  history.h  oicb.1  oicb.c  oicb.h  prepare-release.sh  private.c  private.h  run-tests.sh  utf8.c  utf8.h
.github/workflows/: build-freebsd.yml  build-macos.yml  build-ubuntu.yml  ccpp.yml
cmake/: FindBSD.cmake  FindReadline.cmake
tests/: common.ksh  test-history  test-nick-history-1  test-nick-history-2  test-simple
