cmake_minimum_required(VERSION 3.3)
project(oicb C)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

find_package(Curses REQUIRED)
find_package(Readline REQUIRED)

add_executable(${CMAKE_PROJECT_NAME} oicb.c)
target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
	${CURSES_INCLUDE_DIRS}
	${Readline_INCLUDE_DIRS}
	)
target_link_libraries(${CMAKE_PROJECT_NAME}
	${CURSES_LIBRARIES}
	${Readline_LIBRARIES}
	)
install(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION bin) 

if (APPLE OR CMAKE_SYSTEM_NAME MATCHES ".*BSD.*")
	message(STATUS "It looks you're running BSD system and do not need libbsd")
else()
	find_package(BSD REQUIRED)
	list(APPEND BSD_DEFINITIONS -DLIBBSD_OVERLAY)

	# OpenBSD-specific names
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_CONCAT=STAILQ_CONCAT)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_EMPTY=STAILQ_EMPTY)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_ENTRY=STAILQ_ENTRY)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_FIRST=STAILQ_FIRST)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_FOREACH=STAILQ_FOREACH)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_FOREACH_SAFE=STAILQ_FOREACH_SAFE)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_HEAD=STAILQ_HEAD)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_HEAD_INITIALIZER=STAILQ_HEAD_INITIALIZER)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_INIT=STAILQ_INIT)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_INSERT=STAILQ_INSERT)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_INSERT_AFTER=STAILQ_INSERT_AFTER)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_INSERT_HEAD=STAILQ_INSERT_HEAD)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_INSERT_TAIL=STAILQ_INSERT_TAIL)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_LAST=STAILQ_LAST)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_NEXT=STAILQ_NEXT)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_REMOVE=STAILQ_REMOVE)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_REMOVE_AFTER=STAILQ_REMOVE_AFTER)
	list(APPEND BSD_DEFINITIONS -DSIMPLEQ_REMOVE_HEAD=STAILQ_REMOVE_HEAD)

	list(APPEND BSD_DEFINITIONS -D_BSD_SOURCE=1 -D_GNU_SOURCE=1 -D_DEFAULT_SOURCE=1 -D_XOPEN_SOURCE=700)

	add_definitions(${BSD_DEFINITIONS})
	target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${BSD_INCLUDE_DIRS})
	target_link_libraries(${CMAKE_PROJECT_NAME} ${BSD_LIBRARIES})
	set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES
		COMPILE_OPTIONS "-include${CMAKE_CURRENT_SOURCE_DIR}/compat.h"
		)
endif()

include(CheckSymbolExists)
include(CMakePushCheckState)

check_symbol_exists(pledge unistd.h HAVE_PLEDGE)
if (HAVE_PLEDGE)
	add_definitions(-DHAVE_PLEDGE)
endif()
check_symbol_exists(unveil unistd.h HAVE_UNVEIL)
if (HAVE_UNVEIL)
	add_definitions(-DHAVE_UNVEIL)
endif()

cmake_push_check_state()
list(APPEND CMAKE_REQUIRED_INCLUDES ${Readline_INCLUDE_DIRS})
list(APPEND CMAKE_REQUIRED_LIBRARIES ${Readline_LIBRARIES})
check_symbol_exists(rl_bind_keyseq readline/readline.h HAVE_RL_BIND_KEYSEQ)
cmake_pop_check_state()

if (CMAKE_C_COMPILER_ID STREQUAL Clang OR CMAKE_C_COMPILER_ID STREQUAL GNU)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
	set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Werror")
endif()

# man handling
set(MANDIR "${CMAKE_INSTALL_PREFIX}/man" CACHE PATH "Prefix to directory where to install manual page")
message(STATUS "Manual page will be installed under ${MANDIR}")

install(FILES ${CMAKE_PROJECT_NAME}.1 DESTINATION "${MANDIR}/man1")
